# olist-brazilian-ecommerce

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  SOURCE.md  compose.yml  pyproject.toml
scripts/: load_csv_to_postgres.py
sql/: 01_schema.sql
