[project]
name = "olist-brazilian-ecommerce"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "lab>=8.9",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]
